# ChangeLog for games-action/lugaru-demo
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-action/lugaru-demo/ChangeLog,v 1.6 2006/09/02 23:53:04 mr_bones_ Exp $

  02 Sep 2006; Michael Sterrett <mr_bones_@gentoo.org>
  lugaru-demo-1.0.ebuild:
  clean up QA issues

  11 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  lugaru-demo-1.0.ebuild:
  Marking stable on amd64/x86.

  10 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  lugaru-demo-1.0.ebuild:
  Added modular X dependencies.

  21 Oct 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  lugaru-demo-1.0.ebuild:
  Added addition dir variable to games_make_wrapper for bug #109793.

  10 Oct 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  lugaru-demo-1.0.ebuild:
  Added emul-linux-x86-sdl to RDEPEND for amd64.

*lugaru-demo-1.0 (05 Sep 2005)

  05 Sep 2005; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Anton Romanov #104295.