@@ -1,16 +1,16 @@
-DIST lugaru-linux-x86-1.0.zip 26045039 RMD160 9cc52d38a4b116ee9417b9262c24e398379e3677 SHA1 58b1a678c53ba2395fb0f6a4d214d64207ea10ba SHA256 630e426f8de985c50c42fa148a91bbfc46063bda190d2dd68676858d06c47888
-EBUILD lugaru-demo-1.0.ebuild 1471 RMD160 9009fd1300875249513603efd0156435e3d7f672 SHA1 442bd18e3476d3e41869e03eb4c9107fe148d0fe SHA256 fd4e33a59e3a8a4051404108aeb90c6b16fb8144e6757532d2d841f96c753c70
-MD5 f2e7cbdf28fe76f0eabbeaf0f6c3b03e lugaru-demo-1.0.ebuild 1471
-RMD160 9009fd1300875249513603efd0156435e3d7f672 lugaru-demo-1.0.ebuild 1471
-SHA256 fd4e33a59e3a8a4051404108aeb90c6b16fb8144e6757532d2d841f96c753c70 lugaru-demo-1.0.ebuild 1471
-MISC ChangeLog 978 RMD160 ee48c43efb3e291df18b75b958968e7bede32303 SHA1 0682825e2e6efc5c598f15d9599601b1b633738e SHA256 99dd6bc46b21756b31f45186fc759eaf762b75d704ace6181aeffe30c69099a7
-MD5 38986887b34ad16d1602ad5445c19f23 ChangeLog 978
-RMD160 ee48c43efb3e291df18b75b958968e7bede32303 ChangeLog 978
-SHA256 99dd6bc46b21756b31f45186fc759eaf762b75d704ace6181aeffe30c69099a7 ChangeLog 978
+DIST lugaru-linux-x86-1.0.zip 26043246 RMD160 5301a97319e3f6d9e0ce5de6d606be673263dd7e SHA1 0a6d3a298bc4e30b01d542412c56c0db9c36ddda SHA256 4e65bbbf84d471f5b3ee747f4b7721ebb756fbfb9c94bfe97a2cf95cd8749d99
+EBUILD lugaru-demo-1.0.ebuild 1393 RMD160 9e2a408483407096dbf665ce6b65032bcc481e75 SHA1 d4c1dc62f22364c8dabfe9184dee32a198959faf SHA256 75b7527cb20a6969d8ebbb6cc7cc9ca827f54eb23a364cb69b612a474863f6cd
+MD5 a1144465a3f6c7b1552bd904672f2189 lugaru-demo-1.0.ebuild 1393
+RMD160 9e2a408483407096dbf665ce6b65032bcc481e75 lugaru-demo-1.0.ebuild 1393
+SHA256 75b7527cb20a6969d8ebbb6cc7cc9ca827f54eb23a364cb69b612a474863f6cd lugaru-demo-1.0.ebuild 1393
+MISC ChangeLog 1094 RMD160 033a58af0c88619584091e86660839878cfae829 SHA1 cf481277c46d71c30bc6ba9f58a28e0b831d32f9 SHA256 7ca3c8d58b7a79101f954728bf0a3ccc65ae983f24d5ae09842c57367493d0ea
+MD5 553b4423529ba95eec3d3ed6127e1d06 ChangeLog 1094
+RMD160 033a58af0c88619584091e86660839878cfae829 ChangeLog 1094
+SHA256 7ca3c8d58b7a79101f954728bf0a3ccc65ae983f24d5ae09842c57367493d0ea ChangeLog 1094
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
 MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea metadata.xml 158
 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 metadata.xml 158
-MD5 b3cef092120c2fee0660e516c62fe039 files/digest-lugaru-demo-1.0 259
-RMD160 7d5594827d50e4717a445a0b628397bda2d91493 files/digest-lugaru-demo-1.0 259
-SHA256 e5b74e28dbfc57c9ab812687876064a69d2fdb08d04a88c8e51dd9acae1824d7 files/digest-lugaru-demo-1.0 259
+MD5 9ebaa32c2e79c18dc8dccc07c4a6a40c files/digest-lugaru-demo-1.0 259
+RMD160 ed574a4e0e34df567f3fc5a741a64307e0cdc551 files/digest-lugaru-demo-1.0 259
+SHA256 99177dc23fcca70e4338242f55222b795053ff4daf28f7cd3d4880129bc27e80 files/digest-lugaru-demo-1.0 259
