@@ -1,3 +1,3 @@
-MD5 8c7219a8848f9f582f17b019e5e0d1af lugaru-linux-x86-1.0.zip 26045039
-RMD160 9cc52d38a4b116ee9417b9262c24e398379e3677 lugaru-linux-x86-1.0.zip 26045039
-SHA256 630e426f8de985c50c42fa148a91bbfc46063bda190d2dd68676858d06c47888 lugaru-linux-x86-1.0.zip 26045039
+MD5 c397a5f0630bc80aa4a47ea076e90f24 lugaru-linux-x86-1.0.zip 26043246
+RMD160 5301a97319e3f6d9e0ce5de6d606be673263dd7e lugaru-linux-x86-1.0.zip 26043246
+SHA256 4e65bbbf84d471f5b3ee747f4b7721ebb756fbfb9c94bfe97a2cf95cd8749d99 lugaru-linux-x86-1.0.zip 26043246
