@@ -1,6 +1,9 @@
 # ChangeLog for games-action/lugaru-demo
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-action/lugaru-demo/ChangeLog,v 1.6 2006/09/02 23:53:04 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-action/lugaru-demo/ChangeLog,v 1.7 2006/09/28 14:46:26 nyhm Exp $
+
+  28 Sep 2006; Tristan Heaven <nyhm@gentoo.org> lugaru-demo-1.0.ebuild:
+  Prevent collision-protect error (portage bug)
 
   02 Sep 2006; Michael Sterrett <mr_bones_@gentoo.org>
   lugaru-demo-1.0.ebuild:
